# finance_handler

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
components/: CMakeLists.txt
components/ABNAXlsParser/: CMakeLists.txt
components/ABNAXlsParser/inc/: test.hh
components/ABNAXlsParser/src/: test.cc
components/InputFile/: CMakeLists.txt
components/InputFile/inc/: InputTransactionFile.hh  InputTransactionFileImpl.hh  InputType.hh
components/InputFile/src/: InputTransactionFile.cc
components/InputFile/tst/: CMakeLists.txt  test_InputTransactionFile.cc
components/MapSavableData/: CMakeLists.txt
components/MapSavableData/inc/: Key.hh  MapReadableObject.hh  MapSavableObject.hh  WritableMappedData.hh
components/MapSavableData/tst/: CMakeLists.txt  test_MapReadableObject.cc  test_MapSavableData.cc  test_WritableMappedData.cc
components/Optionals/: CMakeLists.txt
components/Optionals/inc/: OptDouble.hh  OptInteger.hh  OptString.hh  Optional.hh  OptionalBasicTypeTemplate.hh
components/Optionals/tst/: CMakeLists.txt  test_OptDouble.cc  test_OptInteger.cc  test_OptString.cc  test_helper.hh
components/ParsedFilesStorage/: CMakeLists.txt
components/ParsedFilesStorage/inc/: ParsedFileReference.hh  ParsedFiles.hh  ReadableParsedFile.hh  SavableParsedFile.hh
components/ParsedFilesStorage/tst/: CMakeLists.txt  test_ParsedFileReference.cc  test_ParsedFiles.cc  test_ReadableParsedFile.cc  test_SavableParsedFile.cc
components/ParserRegistry/: CMakeLists.txt
components/ParserRegistry/inc/: InputTransactionParser.hh  ParserRegistry.hh  (+1 more)
(+4 files in other folders)
