CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(FinanceHandler VERSION 0.1)

SET(CMAKE_CXX_FLAGS "-std=c++17 -Wall")
SET(CMAKE_EXE_LINKER_FLAGS " -std=c++17 -Wall -fPIC")
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_CXX_CPPCHECK "cppcheck")

ENABLE_TESTING()

ADD_SUBDIRECTORY(components)
